--- a/docs/templates/pages/base-css.mustache
+++ b/docs/templates/pages/base-css.mustache
@@ -838,7 +838,7 @@
             <div class="controls">
               <label class="checkbox">
                 <input type="checkbox" id="optionsCheckbox" value="option1">
-                {{_i}}Option one is this and that&mdash;be sure to include why it’s great{{/i}}
+                {{_i}}Option one is this and that&mdash;be sure to include why it's great{{/i}}
               </label>
             </div>
           </div>
@@ -938,9 +938,9 @@
             </div>
           </div>
           <div class="control-group warning">
-            <label class="control-label" for="inputError">{{_i}}Input with warning{{/i}}</label>
+            <label class="control-label" for="inputWarning">{{_i}}Input with warning{{/i}}</label>
             <div class="controls">
-              <input type="text" id="inputError">
+              <input type="text" id="inputWarning">
               <span class="help-inline">{{_i}}Something may have gone wrong{{/i}}</span>
             </div>
           </div>
@@ -952,9 +952,9 @@
             </div>
           </div>
           <div class="control-group success">
-            <label class="control-label" for="inputError">{{_i}}Input with success{{/i}}</label>
+            <label class="control-label" for="inputSuccess">{{_i}}Input with success{{/i}}</label>
             <div class="controls">
-              <input type="text" id="inputError">
+              <input type="text" id="inputSuccess">
               <span class="help-inline">{{_i}}Woohoo!{{/i}}</span>
             </div>
           </div>
@@ -1069,7 +1069,7 @@
             <div class="controls">
               <label class="checkbox">
                 <input type="checkbox" name="optionsCheckboxList1" value="option1">
-                {{_i}}Option one is this and that&mdash;be sure to include why it’s great{{/i}}
+                {{_i}}Option one is this and that&mdash;be sure to include why it's great{{/i}}
               </label>
               <label class="checkbox">
                 <input type="checkbox" name="optionsCheckboxList2" value="option2">
@@ -1087,7 +1087,7 @@
             <div class="controls">
               <label class="radio">
                 <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
-                {{_i}}Option one is this and that&mdash;be sure to include why it’s great{{/i}}
+                {{_i}}Option one is this and that&mdash;be sure to include why it's great{{/i}}
               </label>
               <label class="radio">
                 <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
@@ -1176,7 +1176,7 @@
     </div>
     <div class="span4">
       <h3>{{_i}}For anchors and forms{{/i}}</h3>
-      <p>{{_i}}Button styles can be applied to anything with the <code>.btn</code> applied. However, typically you’ll want to apply these to only <code>&lt;a&gt;</code> and <code>&lt;button&gt;</code> elements.{{/i}}</p>
+      <p>{{_i}}Button styles can be applied to anything with the <code>.btn</code> applied. However, typically you'll want to apply these to only <code>&lt;a&gt;</code> and <code>&lt;button&gt;</code> elements.{{/i}}</p>
     </div>
     <div class="span4">
       <p>{{_i}}<strong>Note:</strong> All buttons must include the <code>.btn</code> class. Button styles should be applied to <code>&lt;button&gt;</code> and <code>&lt;a&gt;</code> elements for consistency.{{/i}}</p>
@@ -1454,11 +1454,11 @@
     <div class="span4">
       <form>
         <div class="control-group">
-          <label class="control-label" for="prependedInput">{{_i}}Email address{{/i}}</label>
+          <label class="control-label" for="inputIcon">{{_i}}Email address{{/i}}</label>
           <div class="controls">
             <div class="input-prepend">
               <span class="add-on"><i class="icon-envelope"></i></span>
-              <input class="span2" id="iconInput" type="text">
+              <input class="span2" id="inputIcon" type="text">
             </div>
           </div>
         </div>
